crates/flotilla-tui/src/widgets/convoys_page/snapshots/flotilla_tui__widgets__convoys_page__detail__tests__convoy_detail_initializing_snapshot.snap
---
source: crates/flotilla-tui/src/widgets/convoys_page/detail.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────┐"
"│● fix-bug-123 [review-and-fix]                            │"
"└──────────────────────────────────────────────────────────┘"
"┌ Vessels ─────────────────────────────────────────────────┐"
"│initializing…                                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
